# mcp_postgresSQL

./: .dxtignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  GEMINI.md  README.md  manifest.json  pyproject.toml  ruff.toml  tools.md
docs/: CONFIGURATION.md  DEVELOPMENT.md
examples/: usage_examples.md
src/mcp_postgres/: __init__.py  __main__.py  main.py  server.py
src/mcp_postgres/config/: __init__.py  database.py  settings.py
src/mcp_postgres/core/: __init__.py  connection.py  context.py  security.py
src/mcp_postgres/tools/: __init__.py  admin_tools.py  analysis_tools.py  backup_tools.py  data_tools.py  generation_tools.py  performance_tools.py  query_tools.py  register_tools.py  relation_tools.py  schema_tools.py  validation_tools.py
src/mcp_postgres/utils/: __init__.py  error_handler.py  exceptions.py  formatters.py  helpers.py  logging.py  validators.py
tests/: manual_error_testing.py
tests/integration/: test_basic_server.py  test_complete_server.py  test_error_scenarios.py  test_mcp_server.py  test_server_functionality.py  test_tool_registration.py
tests/unit/: test_admin_tools.py  test_analysis_tools.py  test_backup_tools.py  test_data_tools.py  test_error_handling.py  test_generation_tools.py  test_performance_tools.py  test_query_tools.py  test_relation_tools.py  test_schema_tools.py  test_validation_tools.py
